--- a/Jbit/appsettings.Development.json
+++ b/Jbit/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "db": {
+    "connectionString": "host=localhost;port=5432;userid=postgres;password=qwerty;database=jbit"
   }
 }
