Implemented auth service

--- a/Jbit.API/appsettings.Development.json
+++ b/Jbit.API/appsettings.Development.json
@@ -6,6 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "AuthOptions": {
+    "Issuer": "Jbit",
+    "Audience": "Jbit",
+    "Lifetime": "60",
+    "Secret": "c09cb2f7-fb47-4e7d-8c08-da788e35e057"
+  },
   "db": {
     "connectionString": "host=localhost;port=5432;userid=postgres;password=qwerty;database=jbit"
   }
